# multilaser_surveillance

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
config/: arene.rviz  arenes.rviz  cave.rviz  cave_4corners.rviz  detectors.yaml  multilaser_surveillance.rviz
data/: arene.world  arenes.world  cave.yml  cave_4corners.world  simple_4corners2.world  stage_includes.inc
data/maps/: arene.csv  arenes.csv  arenes.pgm  arenes.yaml
include/multilaser_surveillance/: 2dclusterer.h  lite_obstacle_map.h  map_builder_watcher.h  string_split.h  timer.h  wanderer.h
launch/: stage_arene.launch  stage_arenes.launch  stage_cave.launch  stage_cave_4corners.launch  stage_test.launch
src/: 2dclusterer.cpp  map_builder_watcher.cpp  multilaser_surveillance.cpp  pose_matcher.cpp
src/lmfit-6.1/lib/: lmmin.c
test/: gtest_clusterer.cpp  gtest_map_builder_watcher.cpp
