<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>multilaser_surveillance</name>
  <version>0.0.0</version>
  <description>
    A package to detect motion in an area equipped with Laser Range Finders.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bayes_people_tracker</depend>
  <depend>cv_bridge</depend>
  <depend>map_server</depend>
  <depend>people_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>vision_utils</depend>

  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
